--- a/includeInHomePage.html
+++ b/includeInHomePage.html
@@ -1,5 +1,9 @@
-<!-- here comes, in plain text or HTML format,
-some global info for  unauthentified users on portal home page : 'index.php' -->
-
-This text for unauthentified users on portal home page is in file includeInHomePage.html
-
+<div style="border: gray 1px dashed;
+            margin: 10px;
+            padding: 10px;
+            font-size:80%;
+            color: gray;">
+This text zone is displayed to each unauthenticated user. Platform administrator 
+can change its content or remove it by editing the <b>includeInHomePage.html</b> 
+file.
+</div>
