--- a/textzone_top.inc.html
+++ b/textzone_top.inc.html
@@ -4,6 +4,8 @@
             font-size:80%;
             color: gray;">
 This text zone is displayed to each unauthenticated user. Platform administrator 
-can change its content or remove it by editing the <b>includeInHomePage.html</b> 
+can change its content or remove it by editing the <b>textzone_top.inc.html</b> 
 file.
 </div>
+
+
