--- a/claroline/lang/brazilian/whatsNew.html
+++ b/claroline/lang/brazilian/whatsNew.html
@@ -1,3 +1,3 @@
 
-Now  you can add courses when you are already registred.
+Agora você pode adicionar cursos quando você já estiver registrado.
 <HR>
