--- a/claroline/lang/german/whatsNew.html
+++ b/claroline/lang/german/whatsNew.html
@@ -1,3 +1,3 @@
 
-Sie k&ouml;nnen keine Seminare hinzuf&uuml;gen, wenn sie nicht registriert sind
+Sie k&ouml;nnen keine Kurse hinzuf&uuml;gen, wenn sie nicht registriert sind
 <HR>
